--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,6 @@ requests==2.20.0
 requests-oauthlib==0.8.0
 requests-toolbelt==0.8.0
 six==1.10.0
-urllib3==1.22
+urllib3>=1.23
 Werkzeug==0.12.2
 gunicorn==19.7.1
