--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Flask==0.12.3
 flickrapi==2.3
 idna==2.5
 itsdangerous==0.24
-Jinja2==2.9.6
+Jinja2>=2.10.1
 MarkupSafe==1.0
 oauthlib==2.0.2
 requests==2.20.0
